/*
Copyright IBM Corp. 2017 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Modified java_package and other contents by Dingxuan on 2018-03-02
*/

syntax = "proto3";

package protos;
option java_package = "org.bcia.javachain.protos.node";
option java_outer_classname = "SmartContractDataPackage";
option go_package = "github.com/hyperledger/fabric/protos/peer";

//SmartcontractData defines the datastructure for chaincodes to be serialized by proto
//Type provides an additional check by directing to use a specific package after instantiation
//Data is Type specifc (see CDSPackage and SignedCDSPackage)
message SmartContractData {
    string name= 1;
    string version = 2;
    string essc = 3;
    string vssc=4;
    bytes policy=5;
    bytes data=6;
    bytes id=7;
    bytes instantiation_policy=8;
}